@@ -1,10 +1,10 @@
 package store.aurora.search.dto;
 
 
+import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import store.aurora.book.dto.AuthorDTO;
-import store.aurora.book.entity.AuthorRole;
 
 import java.time.LocalDate;
 import java.util.Arrays;
@@ -12,10 +12,10 @@ import java.util.Collections;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-@NoArgsConstructor
 @Setter
+@NoArgsConstructor
+@Getter
 public class BookSearchEntityDTO {
 
     private Long id;
@@ -24,39 +24,70 @@ public class BookSearchEntityDTO {
     private Integer salePrice;
 
     private LocalDate publishDate;
-
     private String publisherName;
 
     private List<AuthorDTO> authors; // 변경된 부분
-
 
     private String imgPath;
 
     private List<Long> categoryIdList; // 카테고리 이름 리스트 추가
 
-
     private Long viewCount;
-    private int reviewCount;
-    private double reviewRating; // 리뷰 평점
+    private Integer reviewCount;
+    private Double reviewRating; // 리뷰 평점
     private boolean isSale;
 
+    // 빌더 클래스
+    public static class Builder {
+        private Long id;
+        private String title;
+        private Integer regularPrice;
+        private Integer salePrice;
+        private Boolean isSale;
+        private LocalDate publishDate;
+        private String publisherName;
+        private String authors;
+        private String bookImagePath;
+        private String categories;
+        private Long viewCount;
+        private Integer reviewCount;
+        private Double reviewRating;
 
-    public BookSearchEntityDTO(Long id, String title, int regularPrice, int salePrice,boolean isSale, LocalDate publishDate, String publisherName, String authorsString, String imgPath,String categoryIdList, Long viewCount, int reviewCount, double reviewRating) {
-        this.id = id;
-        this.title = title;
-        this.regularPrice = regularPrice;
-        this.salePrice = salePrice;
-        this.isSale = isSale;
-        this.publishDate = publishDate;
-        this.publisherName = publisherName;
-        this.authors = convertAuthorsStringToList(authorsString); // 변환 로직
-        this.imgPath = imgPath;
-        this.categoryIdList = convertCategoryIdsToList(categoryIdList); // 수정된 부분
-        this.viewCount = viewCount;
-        this.reviewCount = reviewCount;
-        this.reviewRating = reviewRating;
+        public Builder id(Long id) { this.id = id; return this; }
+        public Builder title(String title) { this.title = title; return this; }
+        public Builder regularPrice(Integer regularPrice) { this.regularPrice = regularPrice; return this; }
+        public Builder salePrice(Integer salePrice) { this.salePrice = salePrice; return this; }
+        public Builder isSale(Boolean isSale) { this.isSale = isSale; return this; }
+        public Builder publishDate(LocalDate publishDate) { this.publishDate = publishDate; return this; }
+        public Builder publisherName(String publisherName) { this.publisherName = publisherName; return this; }
+        public Builder authors(String authors) { this.authors = authors; return this; }
+        public Builder bookImagePath(String bookImagePath) { this.bookImagePath = bookImagePath; return this; }
+        public Builder categories(String categories) { this.categories = categories; return this; }
+        public Builder viewCount(Long viewCount) { this.viewCount = viewCount; return this; }
+        public Builder reviewCount(Integer reviewCount) { this.reviewCount = reviewCount; return this; }
+        public Builder averageReviewRating(Double averageReviewRating) { this.reviewRating = averageReviewRating; return this; }
 
+        public BookSearchEntityDTO build() {
+            return new BookSearchEntityDTO(this);
+        }
     }
+    // 생성자
+    private BookSearchEntityDTO(Builder builder) {
+        this.id = builder.id;
+        this.title = builder.title;
+        this.regularPrice = builder.regularPrice;
+        this.salePrice = builder.salePrice;
+        this.isSale = builder.isSale;
+        this.publishDate = builder.publishDate;
+        this.publisherName = builder.publisherName;
+        this.authors = convertAuthorsStringToList(builder.authors);
+        this.imgPath = builder.bookImagePath;
+        this.categoryIdList =convertCategoryIdsToList( builder.categories);
+        this.viewCount = builder.viewCount;
+        this.reviewCount = builder.reviewCount;
+        this.reviewRating = builder.reviewRating;
+    }
+
 
     public List<Long> convertCategoryIdsToList(String categoryIds) {
         if (categoryIds == null || categoryIds.isEmpty()) {
@@ -64,9 +95,16 @@ public class BookSearchEntityDTO {
         }
         return Arrays.stream(categoryIds.split(","))
                 .map(Long::parseLong)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    public void setAuthors(String authors) {
+        this.authors = convertAuthorsStringToList(authors);
+    }
+
+    public void setCategoryIdList(String categoryIdList) {
+        this.categoryIdList = convertCategoryIdsToList(categoryIdList);
+    }
 
     // 쉼표로 구분된 문자열을 List<AuthorDTO>로 변환
     private List<AuthorDTO> convertAuthorsStringToList(String authorsString) {
@@ -98,48 +136,6 @@ public class BookSearchEntityDTO {
 
 
         return new AuthorDTO(name, role);
-    }
-
-    public Long getId() {
-        return id;
-    }
-
-    public String getTitle() {
-        return title;
-    }
-
-    public int getRegularPrice() {
-        return regularPrice;
-    }
-    public int getSalePrice() {
-        return salePrice;
-    }
-    public LocalDate getPublishDate() {
-        return publishDate;
-    }
-    public String getPublisherName() {
-        return publisherName;
-    }
-   public List<AuthorDTO> getAuthors() {
-        return authors;
-   }
-    public String getImgPath() {
-        return imgPath;
-    }
-    public Long getViewCount() {
-        return viewCount;
-    }
-    public List<Long> getCategoryIdList() {
-        return categoryIdList;
-    }
-    public int getReviewCount() {
-        return reviewCount;
-    }
-    public double getReviewRating() {
-        return reviewRating;
-    }
-    public boolean isSale() {
-        return isSale;
     }
     @Override
     public String toString() {
